# ddns64

./: .dockerignore  .gitignore  Containerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: test_and_build.yaml
config/: .secrets.example.toml  settings.example.toml
ddns64/: config.py  entrypoint.py  healthcheck.py  log.py  updater.py  utils.py
tests/: conftest.py  test_updater.py  test_utils.py
